fix jazzicon alignment

--- a/src/assets/scss/argon.scss
+++ b/src/assets/scss/argon.scss
@@ -67,4 +67,15 @@
 
 @import "custom/vendors";
 
+.jazz-box {
+  display: flex;
+  align-items: center;
 
+  div {
+    display: flex;
+
+    &:nth-child(2) {
+      margin-left: 8px;
+    }
+  }
+}
